--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
   background: white; /* White background */
   height: 50px;
   display: flex;
+  justify-content:space-between;
   align-items:center;
-  font-size: 1.2rem;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1rem;
 }
 .navbar-container {
   column-gap: 20px; /* Gap between columns */
@@ -40,8 +40,7 @@ align-items:center ;
 .nav-links {
   color: black; /* Black text color */
   display: flex;
-  justify-content:space-evenly;
-
+  justify-content:space-evenly;  
   align-items: center;
   text-decoration: none;
   padding: 0 1rem;
@@ -57,35 +56,42 @@ align-items:center ;
 }
 .search-bar {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 4px;
-  width: 200px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: white;
+  width: 30%;
+  border: 1px solid #e4e5eb;
+  border-radius: 5px;
+  padding: 0 5px;
 }
-
-.search-icon {
-  margin-right: 8px;
-  color: black;
-}
-
-.search-input {
+nav input {
   border: none;
-  outline: none;
-  flex-grow: 1;
-  font-size: 16px;
+  width: 100%;
+  padding: 5px;
 }
-
-.search-input::placeholder {
-  color: #888;
+.cart, .cart-small-screen {
+  display: flex;
+  padding: 12px;
+  background-color: #F1F1F1;
+  border-radius: 50%;
+  border: none;
+  position: relative;
+  transition: transform .4s ease;
 }
-
-.search-bar:focus-within {
-  border-color: #86d037;  /* Change border color on focus */
+.cart:hover, .cart-small-screen:hover{
+  transform: scale(1.1,1.1);
 }
-
+.cart-item-qty{
+  position: absolute;
+  top: 0;
+  right: 5px;
+  font-size: 12px;
+  color: #eee;
+  background-color: #f02d34;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  text-align: center;
+  font-weight: 600;
+}
 /* --------------------------------------Footer--------------------------------------------- */
 .footer {
   background: white; /* White background */
@@ -153,8 +159,7 @@ align-items:center ;
   gap: 4rem;
   background: white; /* White background, same as navbar */
   color: black; /* Black text color, same as navbar */
-  font-family: Georgia, 'Times New Roman', Times, serif; /* Same font family as navbar */
-  font-size: 1.2rem; /* Font size similar to navbar */
+  font-size: 1rem; /* Font size similar to navbar */
   align-items: center;
   margin-top: 50px;
 }
@@ -174,12 +179,11 @@ align-items:center ;
 .header-content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 2.5rem;
+  justify-content: space-between;
 }
 
 .header-content span {
-  background-color: #e1edff;
+  background-color: #93b9f4;
   height: 40px;
   width: 120px;
   border-radius: 6px;
@@ -203,7 +207,7 @@ align-items:center ;
   font-size: 1rem;
   line-height: 24px;
   color: #666666; /* Gray color, as used in navbar */
-  width: 70%;
+  width: 50%;
 }
 
 .header-content .btn {
@@ -225,6 +229,7 @@ align-items:center ;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
+  margin-top: 70px;
 }
 
 .header-circle {
@@ -253,10 +258,12 @@ align-items:center ;
   font-family: Georgia, 'Times New Roman', Times, serif; /* Same font family as navbar */
   margin-top: 80px;
 }
-.subtitle{
+.subtitle{ 
 margin-top: 60px;
 text-align: center;
-color: red;
+}
+.subtitle span{
+  color: #93b9f4;
 }
 .subtitle h1{
   font-size:xx-large;
